Fix no nome dos métodos

--- a/src/app/components/cadastro/cadastro.component.html
+++ b/src/app/components/cadastro/cadastro.component.html
@@ -1,4 +1,4 @@
 <main>
     <h1> Cadastro </h1>
-    <button (click)="listarProdutos()">GET</button>
+    <button (click)="listarClientes()">GET</button>
 </main>
