--- a/src/app/components/cadastro/cadastro.component.html
+++ b/src/app/components/cadastro/cadastro.component.html
@@ -1,4 +1,13 @@
 <main>
     <h1> Cadastro </h1>
     <button (click)="listarClientes()">GET</button>
+    <table>
+        <th>
+            <tr *ngFor="let cliente of getClientes">
+                <td>{{cliente.id}}</td>
+                <td>{{cliente.nome}}</td>
+                <td>{{cliente.sobrenome}}</td>
+            </tr>
+        </th>
+    </table>
 </main>
