Alterando a cor da toolbar e refatorando o component tool-bar

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,2 @@
-<p>
-  <mat-toolbar color="primary">
-    <span>My Application</span>
-  </mat-toolbar>
-</p>
-
+<app-toolbar></app-toolbar>
 <app-cadastro></app-cadastro>
