Melhorando o estilo do botão

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,4 @@
-<app-toolbar></app-toolbar>
-<app-cadastro></app-cadastro>
+<main>
+    <app-toolbar></app-toolbar>
+    <app-cadastro></app-cadastro>
+</main>
