--- a/src/app/components/cadastro/cadastro.component.html
+++ b/src/app/components/cadastro/cadastro.component.html
@@ -1,6 +1,6 @@
 <main>
     <h1> Cadastro </h1>
-    <button (click)="listarClientes()">GET</button>
+    <button class="botao" (click)="listarClientes()">GET</button>
     <table>
         <th>
             <tr *ngFor="let cliente of getClientes">
