Colocando uma fonte geral

--- a/src/app/components/cadastro/cadastro.component.html
+++ b/src/app/components/cadastro/cadastro.component.html
@@ -1,6 +1,5 @@
-<main>
-    <h1> Cadastro </h1>
-    <button class="botao" (click)="listarClientes()">GET</button>
+<main class="font">
+    <button class="botao" (click)="listarClientes()">Consultar</button>
     <table>
         <th>
             <tr *ngFor="let cliente of getClientes">
