--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Fira+Sans:wght@300;400;500;700&display=swap');
 main { 
     color: #FFFFFF;
+    font-family: 'Fira Sans', sans-serif;    
 }
