--- a/src/app/components/cadastro/cadastro.component.css
+++ b/src/app/components/cadastro/cadastro.component.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Fira+Sans:wght@300;400;500;700&display=swap');
 .botao {
     background-color: #f4511e;
     border: none;
@@ -13,6 +14,14 @@
     border-radius: 40px;
  }
 
- main {
+ .font {
+    font-family: 'Fira Sans', sans-serif;
+ }
+
+main {
     color: black;
+    
 }
+
+
+
