Melhorando o estilo dos componentes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,7 @@
 <main>
     <app-toolbar></app-toolbar>
-    <app-carousel></app-carousel>
-    <app-cadastro></app-cadastro>
+    <div>        
+        <app-carousel></app-carousel>
+        <app-cadastro></app-cadastro>
+    </div>
 </main>
