--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Fira+Sans:wght@300;400;500;700&display=swap');
 
-html, body { height: 100%; }
+html, body {
+     height: 100%;
+ }
 body { 
     margin: 0;
     background-color: white;
