--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,8 @@
 <main>
-    <app-toolbar></app-toolbar>
-    <div>        
+    <app-toolbar></app-toolbar>  
+    <div class="container">
         <app-carousel></app-carousel>
         <app-cadastro></app-cadastro>
-    </div>
+    </div>     
+    <app-footer></app-footer>
 </main>
