--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,17 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Fira+Sans:wght@300;400;500;700&display=swap');
 main { 
-    color: #FFFFFF;
-    font-family: 'Fira Sans', sans-serif;
-    width: 100%; 
-    margin: 0 auto;    
-}
-
-app-carousel { 
-    margin: 0px 10px;
-}
-
-div {
     width: 100%; 
     margin: 0 auto;
+    color: #FFFFFF;
+    font-family: 'Fira Sans', sans-serif;
+}
+.container {
+    width: 100%;
     max-width: 1000px;
 }
