--- a/src/app/components/cadastro/cadastro.component.html
+++ b/src/app/components/cadastro/cadastro.component.html
@@ -1,5 +1,10 @@
 <main class="font">
-    <button class="botao" (click)="listarClientes()">Consultar</button>
+    <div class="botao-container">
+      <button class="botao" (click)="listarClientes()">Consultar</button>
+      <button class="botao">Cadastrar</button>
+      <button class="botao">Alterar</button>
+      <button class="botao">Deletar</button>
+    </div>
 
     <table class="table table-striped">
         <thead>
