--- a/src/app/components/cadastro/cadastro.component.css
+++ b/src/app/components/cadastro/cadastro.component.css
@@ -1,5 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Fira+Sans:wght@300;400;500;700&display=swap');
 
+.botao-container{
+    display: flex;
+    justify-content: space-around;
+}
+
 .botao {
     background-color: #f4511e;
     border: none;
