--- a/src/app/components/cadastro/cadastro.component.html
+++ b/src/app/components/cadastro/cadastro.component.html
@@ -1,9 +1,4 @@
 <main class="font">
-    <div class="botao-container">
-      <button class="botao" (click)="listarClientes()">Consultar</button>
-      <button class="botao">Cadastrar</button>
-      <button class="botao">Alterar</button>
-      <button class="botao">Deletar</button>
-    </div>
-    <app-tabela></app-tabela>
+  <app-botoes></app-botoes>
+  <app-tabela></app-tabela>
 </main>
