Capturando o evento emitido pelo botao, em seu componente pai, cadastro

--- a/src/app/components/cadastro/cadastro.component.html
+++ b/src/app/components/cadastro/cadastro.component.html
@@ -1,4 +1,4 @@
 <main class="font">
-  <app-botoes></app-botoes>
+  <app-botoes (onConsultarClick)="consultar()"></app-botoes>
   <app-tabela></app-tabela>
 </main>
