--- a/src/app/components/cadastro/cadastro.component.html
+++ b/src/app/components/cadastro/cadastro.component.html
@@ -1,4 +1,5 @@
 <main class="font">
   <app-botoes (onConsultarClick)="consultar()"></app-botoes>
   <app-tabela></app-tabela>
+  <app-formulario></app-formulario>
 </main>
