--- a/src/app/components/botoes/botoes.component.css
+++ b/src/app/components/botoes/botoes.component.css
@@ -1,19 +1,17 @@
 .botao-container{
     display: flex;
     justify-content: space-around;
+    margin: 10px 10px 10px 10px;
 }
 
-.botao {
+.btn{
+    border: 2px solid #f4511e;
+    color: #ffffff;
     background-color: #f4511e;
-    border: none;
-    color: white;
-    padding: 16px 32px;
-    text-align: center;
-    font-size: 16px;
-    margin: 20px 20px;
-    transition: 0.3s;
-    display: inline-block;
-    text-decoration: none;
-    cursor: pointer;
-    border-radius: 40px;
- }
+}
+
+.btn:hover {
+    background-color: #8f2f12;
+    border: 2px solid #8f2f12;
+    color: #fff
+}
