--- a/src/app/components/botoes/botoes.component.html
+++ b/src/app/components/botoes/botoes.component.html
@@ -1,6 +1,6 @@
 <div class="botao-container">
-    <button class="botao" (click)="listarClientes()">Consultar</button>
-    <button class="botao">Cadastrar</button>
-    <button class="botao">Alterar</button>
-    <button class="botao">Deletar</button>
+    <button (click)="listarClientes()" type="button" class="btn btn-outline-warning">Consultar</button>
+    <button type="button" class="btn btn-outline-warning">Cadastrar</button>
+    <button type="button" class="btn btn-outline-warning">Alterar</button>
+    <button type="button" class="btn btn-outline-warning">Deletar</button>
   </div>
