--- a/src/app/components/formulario/formulario.component.html
+++ b/src/app/components/formulario/formulario.component.html
@@ -1,7 +1,13 @@
-<form>
+<form class="form">
     <div class="form-group">
-      <label for="exampleInputEmail1">Nome</label>
-      <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Entre seu nome">
+      <label class="label" for="exampleInputEmail1">Nome</label>
+      <input type="text" class="form-control" id="inputNome" placeholder="Entre seu nome">
+
+      <label class="label" for="exampleInputEmail1">Sobrenome</label>
+      <input type="text" class="form-control" id="inputNome" placeholder="Entre seu nome">
+
+      <label class="label" for="exampleInputEmail1">Email</label>
+      <input type="text" class="form-control" id="inputNome" placeholder="Entre seu nome">
     </div>
-    <button type="button" class="btn btn-outline-warning">Warning</button>
+    <button type="button" class="btn btn-outline-warning">Enviar</button>
   </form>
