Usando ngModel para capturar conteúdo dos inputs do formulário

--- a/src/app/components/formulario/formulario.component.html
+++ b/src/app/components/formulario/formulario.component.html
@@ -1,13 +1,14 @@
-<form class="form">
+<form class="form" (submit)="envioFormulario()">
     <div class="form-group">
       <label class="label" for="exampleInputEmail1">Nome</label>
-      <input type="text" class="form-control" id="inputNome" placeholder="Entre seu nome">
-
+      <input type="text" name="nome" class="form-control" id="nome" placeholder="Entre seu nome" [(ngModel)]="nome">
+      {{ nome }}
       <label class="label" for="exampleInputEmail1">Sobrenome</label>
-      <input type="text" class="form-control" id="inputNome" placeholder="Entre seu nome">
-
+      <input type="text" name="sobrenome" class="form-control" id="sobrenome" placeholder="Entre seu sobrenome" [(ngModel)]="sobrenome">
+      {{ sobrenome }}
       <label class="label" for="exampleInputEmail1">Email</label>
-      <input type="text" class="form-control" id="inputNome" placeholder="Entre seu nome">
+      <input type="text" name="email" class="form-control" id="email" placeholder="Entre seu email" [(ngModel)]="email">
+      {{ email }}
     </div>
-    <button type="button" class="btn btn-outline-warning">Enviar</button>
+    <button type="submit" class="btn btn-outline-warning">Enviar</button>
   </form>
