--- a/src/app/components/tabela/tabela.component.css
+++ b/src/app/components/tabela/tabela.component.css
@@ -1,3 +1,11 @@
 .table {
     margin: 30px auto;
+
+    border: 1px solid #999;
+    box-shadow: 1px 1px 2px #333;
+}
+
+.row-table{
+    max-width: 20px;
+
 }
