--- a/src/app/components/botoes/botoes.component.html
+++ b/src/app/components/botoes/botoes.component.html
@@ -1,6 +1,6 @@
 <div class="botao-container">
-    <button (click)="listarClientes()" type="button" class="btn btn-outline-warning">Consultar</button>
-    <button type="button" class="btn btn-outline-warning">Cadastrar</button>
+    <button [routerLink]="['/tabela']" (click)="listarClientes()" type="button" class="btn btn-outline-warning">Consultar</button>
+    <button [routerLink]="['/formulario']"type="button" class="btn btn-outline-warning">Cadastrar</button>
     <button type="button" class="btn btn-outline-warning">Alterar</button>
     <button type="button" class="btn btn-outline-warning">Deletar</button>
   </div>
