--- a/src/app/components/cadastro/cadastro.component.html
+++ b/src/app/components/cadastro/cadastro.component.html
@@ -1,5 +1,5 @@
 <main class="font">
-  <app-botoes (onConsultarClick)="consultar()"></app-botoes>
+  <app-botoes></app-botoes>
   <router-outlet class="tabela"></router-outlet>
   <router-outlet></router-outlet>
 </main>
