Fazendo com que a requisição seja chamada direto quando o componente for chamado pela sua rota, ao invés de depender do click do botão

--- a/src/app/components/botoes/botoes.component.html
+++ b/src/app/components/botoes/botoes.component.html
@@ -1,5 +1,5 @@
 <div class="botao-container">
-    <button (click)="listarClientes()" [routerLink]="['/tabela']" type="button" class="btn btn-outline-warning">Consultar</button>
+    <button [routerLink]="['/tabela']" type="button" class="btn btn-outline-warning">Consultar</button>
     <button [routerLink]="['/formulario']" type="button" class="btn btn-outline-warning">Cadastrar</button>
     <button type="button" class="btn btn-outline-warning">Alterar</button>
     <button type="button" class="btn btn-outline-warning">Deletar</button>
