implementando formulario update

--- a/src/app/components/cadastro/cadastro.component.html
+++ b/src/app/components/cadastro/cadastro.component.html
@@ -2,4 +2,5 @@
   <app-botoes></app-botoes>
   <router-outlet class="tabela"></router-outlet>
   <router-outlet></router-outlet>
+  <app-formulario-update></app-formulario-update>
 </main>
