--- a/src/app/components/tabela/tabela.component.html
+++ b/src/app/components/tabela/tabela.component.html
@@ -12,7 +12,10 @@
       <td id="nome" class="row-table" [routerLink]="['/update']" (click)="consultarCliente(cliente)">{{cliente.nome}}</td>
       <td class="row-table">{{cliente.sobrenome}}</td>
       <td class="row-table">{{cliente.email}} </td>
-      <mat-icon (click)="deletarCliente(cliente)" class="delete">delete</mat-icon>
+      <div class="icons">
+        <mat-icon (click)="deletarCliente(cliente)" class="delete">delete</mat-icon>
+        <mat-icon class="delete">edit</mat-icon>
+      </div>
     </tr>
     </tbody>
   </table>
