--- a/src/app/components/tabela/tabela.component.html
+++ b/src/app/components/tabela/tabela.component.html
@@ -4,7 +4,7 @@
       <th class="row-table" scope="col">Nome</th>
       <th class="row-table" scope="col">Sobrenome</th>
       <th class="row-table" scope="col">Email</th>
-      <th class="row-table" class="delete" scope="col"></th>
+      <th class="row-table" class="icons" scope="col"></th>
     </tr>
     </thead>
     <tbody>
@@ -12,9 +12,9 @@
       <td id="nome" class="row-table" (click)="consultarCliente(cliente)">{{cliente.nome}}</td>
       <td class="row-table">{{cliente.sobrenome}}</td>
       <td class="row-table">{{cliente.email}} </td>
-      <div class="icons">
-        <mat-icon (click)="deletarCliente(cliente)" class="delete">delete</mat-icon>
-        <mat-icon [routerLink]="['/update']" class="delete">edit</mat-icon>
+      <div class="icons" id="icons-table">
+        <mat-icon (click)="deletarCliente(cliente)" class="icon">delete</mat-icon>
+        <mat-icon [routerLink]="['/update']" class="icon">edit</mat-icon>
       </div>
     </tr>
     </tbody>
