--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Fira+Sans:wght@300;400;500;700&display=swap');
 
+*{
+    box-sizing: border-box;
+}
+
 body { 
     background-color: white;
     font-family: 'Fira Sans', sans-serif;
