--- a/src/app/components/tabela/tabela.component.css
+++ b/src/app/components/tabela/tabela.component.css
@@ -15,20 +15,20 @@ th{
 }
 
 .icons {
-    max-width: 5px;
+    max-width: 10px;
 }
 
 #icons-table {
-    display: flex;
     margin: 0 auto;
+    display: flex;
 }
 
 .icon {
-    
-}
-
-mat-icon {
     cursor: pointer;
+    padding: 20px 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 #nome {
