Fix na chamada do método que altera o cliente

--- a/src/app/components/tabela/tabela.component.html
+++ b/src/app/components/tabela/tabela.component.html
@@ -9,12 +9,12 @@
     </thead>
     <tbody>
     <tr *ngFor="let cliente of getClientes">
-      <td id="nome" class="row-table" (click)="consultarCliente(cliente)">{{cliente.nome}}</td>
+      <td id="nome" class="row-table">{{cliente.nome}}</td>
       <td class="row-table">{{cliente.sobrenome}}</td>
       <td class="row-table">{{cliente.email}} </td>
       <div class="icons" id="icons-table">
         <mat-icon (click)="deletarCliente(cliente)" class="icon">delete</mat-icon>
-        <mat-icon [routerLink]="['/update']" class="icon">edit</mat-icon>
+        <mat-icon (click)="consultarCliente(cliente)" [routerLink]="['/update']" class="icon">edit</mat-icon>
       </div>
     </tr>
     </tbody>
