Fazendo com que o método deletarCliente receba apenas o id do cliente que será deletado

--- a/src/app/components/tabela/tabela.component.html
+++ b/src/app/components/tabela/tabela.component.html
@@ -13,7 +13,7 @@
       <td class="row-table">{{cliente.sobrenome}}</td>
       <td class="row-table">{{cliente.email}} </td>
       <div class="icons" id="icons-table">
-        <mat-icon (click)="deletarCliente(cliente)" class="icon">delete</mat-icon>
+        <mat-icon (click)="deletarCliente(cliente.id)" class="icon">delete</mat-icon>
         <mat-icon (click)="enviarIdCliente(cliente.id)" [routerLink]="['/update']" class="icon">edit</mat-icon>
       </div>
     </tr>
