Implementando modificadores de acesso para as classes

--- a/src/app/components/tabela/tabela.component.html
+++ b/src/app/components/tabela/tabela.component.html
@@ -14,7 +14,7 @@
       <td class="row-table">{{cliente.email}} </td>
       <div class="icons" id="icons-table">
         <mat-icon (click)="deletarCliente(cliente.id)" class="icon">delete</mat-icon>
-        <mat-icon (click)="enviarIdCliente(cliente.id)" [routerLink]="['/update']" class="icon">edit</mat-icon>
+        <mat-icon (click)="enviarIdCliente(cliente.id)" [routerLink]="['/formulario-update']" class="icon">edit</mat-icon>
       </div>
     </tr>
     </tbody>
