--- a/src/app/components/toolbar/toolbar.component.html
+++ b/src/app/components/toolbar/toolbar.component.html
@@ -1,3 +1,3 @@
 <mat-toolbar class="tool-bar">
-    <span>Cadastro</span>
+    <img class="img" src="https://www2.deloitte.com/content/dam/assets/logos/deloitte.svg" alt="logo-deloitte">
 </mat-toolbar>
