--- a/src/app/components/footer/footer.component.css
+++ b/src/app/components/footer/footer.component.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Fira+Sans:wght@300;400;500;700&display=swap');
+
 .tool-bar {
-    background-color: #a13311;
+    background-color: #2B2B2B;
     font-family: 'Fira Sans';
     box-shadow: 0px 5px 10px gray;
     position: fixed;
