--- a/src/app/components/formulario/formulario.component.css
+++ b/src/app/components/formulario/formulario.component.css
@@ -1,24 +1,31 @@
 .btn{
-    border: 1px solid #f4511e;
-    color: #f4511e;
+    border: 3px solid #2B2B2B;
+    color: #2B2B2B;
+    font-weight: 700; 
 }
 
 .btn:hover {
-    background-color: #8f2f12;
-    border: 1px solid #8f2f12;
+    background-color: #43B02A;
+    border: 3px solid #43B02A;
     color: #fff
 }
 
 .form-control:focus {
-    border: 1px solid #8f2f12;
-    box-shadow: 1px 1px 3px #8f2f12;
+    border: 1px solid #2B2B2B;
+    box-shadow: 1px 1px 3px #2B2B2B;
+}
+
+.btn:active {
+    background-color: #2B2B2B;
+    border: 3px solid #2B2B2B;
+    color: #fff
 }
 
 .form {
     margin: 30px auto;
 
     border: 1px solid #999;
-    box-shadow: 1px 1px 2px #333;
+    box-shadow: 1px 1px 2px #2B2B2B;
     padding: 30px;
 }
 
