--- a/src/app/components/toolbar/toolbar.component.css
+++ b/src/app/components/toolbar/toolbar.component.css
@@ -1,7 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Fira+Sans:wght@300;400;500;700&display=swap');
 
 .tool-bar {
-    background-color: rgb(216, 96, 17);
+    background-color: rgb(0, 0, 0);
     font-family: 'Fira Sans';
     box-shadow: 0px 5px 10px gray;
+}
+
+.img {
+    width: 150px;
+    height: 75px;
 }
