Criando o componente servico e relacionando seu path à um click

--- a/src/app/components/cadastro/cadastro.component.html
+++ b/src/app/components/cadastro/cadastro.component.html
@@ -3,4 +3,5 @@
   <router-outlet class="tabela"></router-outlet>
   <router-outlet></router-outlet>
   <router-outlet></router-outlet>
+  <router-outlet></router-outlet>
 </main>
