--- a/src/app/components/toolbar/toolbar.component.css
+++ b/src/app/components/toolbar/toolbar.component.css
@@ -1,9 +1,18 @@
 @import url('https://fonts.googleapis.com/css2?family=Fira+Sans:wght@300;400;500;700&display=swap');
 
 .tool-bar {
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    gap: 30px;
     background-color: rgb(0, 0, 0);
     font-family: 'Fira Sans';
     box-shadow: 0px 5px 10px gray;
+}
+
+.menu-itens{
+    padding-top: 4px;
+    cursor: pointer;
 }
 
 .img {
