--- a/src/app/components/toolbar/toolbar.component.html
+++ b/src/app/components/toolbar/toolbar.component.html
@@ -1,3 +1,6 @@
 <mat-toolbar class="tool-bar">
-    <img class="img" [routerLink]="['/servico']" src="https://www2.deloitte.com/content/dam/assets/logos/deloitte.svg" alt="logo-deloitte">
+    <img class="img" src="https://www2.deloitte.com/content/dam/assets/logos/deloitte.svg" alt="logo-deloitte">
+    <div class="menu-itens">
+        <h3 [routerLink]="['/servico']">Serviços</h3>
+    </div>
 </mat-toolbar>
