Alterando layout botão serviço e inserindo um logo

--- a/src/app/components/toolbar/toolbar.component.html
+++ b/src/app/components/toolbar/toolbar.component.html
@@ -1,10 +1,6 @@
 <mat-toolbar class="tool-bar">
-    <img class="img" src="https://www2.deloitte.com/content/dam/assets/logos/deloitte.svg" alt="logo-deloitte">
+    <img class="img" src="assets\img\Consult-logo.png" alt="logo-deloitte">
     <div class="menu-itens">
-        <mat-tab-group>
-            <mat-tab class="item" label="Servico" [routerLink]="['/servico']"></mat-tab>
-            <mat-tab label="Second"></mat-tab>
-            <mat-tab label="Third"></mat-tab>
-          </mat-tab-group>
+        <h3 class="item" [routerLink]="['/servico']">Serviços</h3>
     </div>
 </mat-toolbar>
