--- a/src/app/components/toolbar/toolbar.component.css
+++ b/src/app/components/toolbar/toolbar.component.css
@@ -8,14 +8,13 @@
     background-color: rgb(0, 0, 0);
     font-family: 'Fira Sans';
     box-shadow: 0px 5px 10px gray;
-}
-
-.menu-itens{
-    padding-top: 4px;
+    height: 90px;
 }
 
 .item{
     cursor: pointer;
+    color: #b4b4b4;
+    font-size: 25px;
 }
 
 .item:hover{
@@ -23,6 +22,6 @@
 }
 
 .img {
-    width: 150px;
-    height: 75px;
+    width: 100px;
+    height: 100px;
 }
