--- a/src/app/components/servico/servico.component.html
+++ b/src/app/components/servico/servico.component.html
@@ -1,1 +1,21 @@
-<p>servico works!</p>
+<mat-accordion>
+    <mat-expansion-panel hideToggle>
+      <p>This is the primary content of the panel.</p>
+    </mat-expansion-panel>
+    <mat-expansion-panel (opened)="panelOpenState = true"
+                         (closed)="panelOpenState = false">
+      <mat-expansion-panel-header>
+        <mat-panel-title>
+          Nossos serviços
+        </mat-panel-title>
+        <mat-panel-description>
+          Serviço
+        </mat-panel-description>
+      </mat-expansion-panel-header>
+      <table>
+          <tr *ngFor="let nome of nomes">
+              <td>{{ nome }}</td>
+          </tr>
+      </table>
+    </mat-expansion-panel>
+  </mat-accordion>
