--- a/src/app/components/servicos/servico.component.html
+++ b/src/app/components/servicos/servico.component.html
@@ -13,8 +13,11 @@
         </mat-panel-description>
       </mat-expansion-panel-header>
       <table>
-          <tr *ngFor="let nome of nomes">
-              <td>{{ nome }}</td>
+          <tr *ngFor="let servico of servicos">
+              <td>{{ servico.id }}</td>
+              <td>{{ servico.titulo }}</td>
+              <td>{{ servico.descricao }}</td>
+              <td>{{ servico.valor }}</td>
           </tr>
       </table>
     </mat-expansion-panel>
