--- a/src/app/components/servicos/servico.component.html
+++ b/src/app/components/servicos/servico.component.html
@@ -12,7 +12,7 @@
           <tr>
             <th scope="col"><mat-icon class="icon">delete</mat-icon></th>
             <th scope="col"><mat-icon class="icon">edit</mat-icon></th>
-            <th scope="col"><mat-icon class="icon" (click)="inserirServico()">login</mat-icon></th>
+            <th scope="col"><mat-icon class="icon" [routerLink]="['/formulario-servico']" (click)="inserirServico()">login</mat-icon></th>
           </tr>
 
           <tr>
