--- a/src/app/components/formulario-servico/formulario-servico.component.html
+++ b/src/app/components/formulario-servico/formulario-servico.component.html
@@ -1,13 +1,13 @@
 <form class="form" (submit)="envioFormulario()">
     <div class="form-group">
       <label class="label" for="exampleInputEmail1">Titulo</label>
-      <input type="text" name="titulo" class="form-control" id="nome" placeholder="Entre o titulo" [(ngModel)]="titular">
+      <input type="text" name="titulo" class="form-control" id="nome" placeholder="Entre o titulo" [(ngModel)]="titulo">
       
       <label class="label" for="exampleInputEmail1">Descricao</label>
       <input type="text" name="descricao" class="form-control" id="sobrenome" placeholder="Entre a descrição" [(ngModel)]="descricao">
       
       <label class="label" for="exampleInputEmail1">Valor</label>
-      <input type="text" name="valor" class="form-control" id="email" placeholder="Entre o valor" [(ngModel)]="valor">
+      <input type="text" name="valor" class="form-control" id="email" placeholder="0" [(ngModel)]="valor">
     </div>
     <button type="submit" class="btn btn-outline-warning">Enviar</button>
   </form>
