Implementando componente body

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,5 @@
 <main>
-    <app-toolbar></app-toolbar>  
-    <div class="container">
-        <app-carousel></app-carousel>
-        <app-cadastro></app-cadastro>
-    </div>     
+    <app-toolbar></app-toolbar> 
+    <app-body></app-body> 
     <app-footer></app-footer>
 </main>
