Refatorando botao de cadastro de clientes e removendo componente botoes

--- a/src/app/components/cadastro/clientes.component.html
+++ b/src/app/components/cadastro/clientes.component.html
@@ -1,4 +1,5 @@
 <main class="font">
+  <app-botoes></app-botoes>
   <router-outlet class="tabela"></router-outlet>
   <router-outlet></router-outlet>
   <router-outlet></router-outlet>
