--- a/src/app/components/toolbar/toolbar.component.html
+++ b/src/app/components/toolbar/toolbar.component.html
@@ -1,6 +1,5 @@
 <mat-toolbar class="tool-bar">
     <img class="img" src="assets\img\Consult-logo.png" alt="logo-deloitte">
-    <div class="menu-itens">
         <h3 class="item" [routerLink]="['/servico']">Serviços</h3>
-    </div>
+        <h3 class="item" [routerLink]="['/tabela']">Clientes</h3>
 </mat-toolbar>
