--- a/src/app/components/body/body.component.html
+++ b/src/app/components/body/body.component.html
@@ -1,4 +1,3 @@
 <section class="section">
-    <app-carousel></app-carousel>
-    <app-cadastro></app-cadastro>  
+    <router-outlet></router-outlet>
 </section>
