--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <main>
     <app-toolbar></app-toolbar> 
-    <app-body></app-body> 
+    <router-outlet></router-outlet>
     <app-footer></app-footer>
 </main>
