--- a/src/app/components/clientes/clientes.component.css
+++ b/src/app/components/clientes/clientes.component.css
@@ -38,6 +38,9 @@ th{
     padding: 0;
     cursor: pointer;
 }
+.icon-cadastrar:hover{
+    color: #26890D;
+}
 
 .th-cadastrar {
     display: flex;
