--- a/src/app/components/clientes/clientes.component.html
+++ b/src/app/components/clientes/clientes.component.html
@@ -12,10 +12,10 @@
     <td id="nome" class="row-table">{{cliente.nome}}</td>
     <td class="row-table">{{cliente.sobrenome}}</td>
     <td class="row-table">{{cliente.email}} </td>
-    <div class="icons" id="icons-table">
+    <td class="icons" id="icons-table">
       <mat-icon (click)="deletarCliente(cliente.id)" class="icon">delete</mat-icon>
       <mat-icon (click)="enviarIdCliente(cliente.id)" [routerLink]="['/formulario-update']" class="icon">edit</mat-icon>
-    </div>
+    </td>
   </tr>
   </tbody>
 </table>
