--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Fira+Sans:wght@300;400;500;700&display=swap');
 main {
-    margin: 0 auto;
+    margin: 10px 10px 10px 10px;
     color: #FFFFFF;
     font-family: 'Fira Sans', sans-serif;
 }
