--- a/src/app/components/clientes/clientes.component.html
+++ b/src/app/components/clientes/clientes.component.html
@@ -4,7 +4,7 @@
     <th class="row-table" scope="col">Nome</th>
     <th class="row-table" scope="col">Sobrenome</th>
     <th class="row-table" scope="col">Email</th>
-    <th class="row-table" class="th-cadastrar" scope="col"><mat-icon [routerLink]="['/formulario']" class="icon-cadastrar">login</mat-icon></th>
+    <th class="row-table" id="th-cadastrar" scope="col"><mat-icon [routerLink]="['/formulario']" class="icon-cadastrar" >add</mat-icon></th>
   </tr>
   </thead>
   <tbody>
