--- a/src/app/components/servicos/servico.component.html
+++ b/src/app/components/servicos/servico.component.html
@@ -27,6 +27,9 @@
       </table>    
     </mat-expansion-panel>
   </mat-accordion> -->
+  <div id="create-button" class="container">
+    <button [routerLink]="['/formulario-servico']" type="button" class="btn btn-outline-warning">Adicionar servico</button>
+  </div>
 
   <mat-card class="container" *ngFor="let servico of servicos">
     <mat-card-title-group class="header">
