--- a/src/app/components/toolbar/toolbar.component.html
+++ b/src/app/components/toolbar/toolbar.component.html
@@ -1,5 +1,6 @@
 <mat-toolbar class="tool-bar">
     <img [routerLink]="['/']" class="img" src="assets\img\Consult-logo.png" alt="logo-deloitte">
-        <h3 class="item" [routerLink]="['/servico']">Serviços</h3>
-        <h3 class="item" [routerLink]="['/clientes']">Clientes</h3>
+    <h3 class="item" [routerLink]="['/servico']">Serviços</h3>
+    <h3 class="item" [routerLink]="['/clientes']">Clientes</h3>
+    <mat-icon class="icon">login</mat-icon>
 </mat-toolbar>
