Implementando rota para o componente de login

--- a/src/app/components/toolbar/toolbar.component.html
+++ b/src/app/components/toolbar/toolbar.component.html
@@ -2,5 +2,5 @@
     <img [routerLink]="['/']" class="img" src="assets\img\Consult-logo.png" alt="logo-deloitte">
     <h3 class="item" [routerLink]="['/servico']">Serviços</h3>
     <h3 class="item" [routerLink]="['/clientes']">Clientes</h3>
-    <mat-icon class="icon">login</mat-icon>
+    <mat-icon [routerLink]="['/login']" class="icon">login</mat-icon>
 </mat-toolbar>
