--- a/src/app/components/formulario-usuario-login/formulario-usuario-login.component.html
+++ b/src/app/components/formulario-usuario-login/formulario-usuario-login.component.html
@@ -1,6 +1,6 @@
 <article>
     <form>
-        <a class="fechar"><i class="material-icons">close</i></a>
+        <a class="fechar"><i class="material-icons" [routerLink]="['/']">close</i></a>
         <label>
             Usuario:
             <input type="text" name="usuario" id="usuario">
