--- a/src/app/components/formulario-usuario-login/formulario-usuario-login.component.html
+++ b/src/app/components/formulario-usuario-login/formulario-usuario-login.component.html
@@ -1,5 +1,5 @@
 <article>
-    <form>
+    <form (submit)="envioFormulario()">
         <a class="fechar"><i class="material-icons" [routerLink]="['/']">close</i></a>
         <label>
             Usuario:
@@ -11,7 +11,7 @@
         </label>
         <div class="controles">
             <button type="button" class="link">Remover contato</button>
-            <button class="salvar" >Salvar</button>
+            <button type="submit" class="salvar" >Salvar</button>
         </div>
     </form>
 </article>
