Implementando cadastro component

--- a/src/app/components/formulario-usuario/formulario-usuario.component.html
+++ b/src/app/components/formulario-usuario/formulario-usuario.component.html
@@ -1,1 +1,25 @@
-<p>formulario-usuario works!</p>
+<article>
+    <form>
+        <a class="fechar"><i class="material-icons">close</i></a>
+        <label>
+            Usuario:
+            <input type="text" name="usuario" id="usuario">
+        </label>
+        <label>
+            Senha:
+            <input type="password" name="senha" id="senha">
+        </label>
+        <label>
+            Senha:
+            <input type="password" name="senha" id="senha">
+        </label>
+        <label>
+            Confirme sua senha:
+            <input type="password" name="senha" id="senha">
+        </label>
+        <div class="controles">
+            <button type="button" class="link">voltar</button>
+            <button class="salvar" >Salvar</button>
+        </div>
+    </form>
+</article>
