--- a/src/app/components/formulario-usuario-login/formulario-usuario-login.component.html
+++ b/src/app/components/formulario-usuario-login/formulario-usuario-login.component.html
@@ -10,7 +10,7 @@
             <input type="password" name="senha" id="senha" [(ngModel)]="senha">
         </label>
         <div class="controles">
-            <button type="button" class="link">Remover contato</button>
+            <p class="link">Voltar</p>
             <button type="submit" class="salvar" >Salvar</button>
         </div>
     </form>
