--- a/src/app/components/formulario-usuario-login/formulario-usuario-login.component.css
+++ b/src/app/components/formulario-usuario-login/formulario-usuario-login.component.css
@@ -14,7 +14,7 @@ article {
 }
 
 article form {
-    background-color: rgba(0,0,0,0.4);
+    background-color: #2B2B2B;
     padding: 40px;
     box-shadow: 0 0 2px inset rgba(256,256,256,0.3);
     width: 400px;
@@ -43,14 +43,6 @@ article form div input {
     margin-right: 10px;
 }
 
-article form div a.remove{
-    color: #C00;
-}
-
-article form div a.remove:hover{
-    color: rgb(252, 7, 7);
-}
-
 article form .controles{
     display: flex;
     justify-content: flex-end;
@@ -59,5 +51,7 @@ article form .controles{
 }
 
 article form .controles .link{
+    cursor: pointer;
     margin-right: auto;
+    
 }
