--- a/src/app/components/formulario-usuario/formulario-usuario.component.html
+++ b/src/app/components/formulario-usuario/formulario-usuario.component.html
@@ -3,7 +3,7 @@
         <a class="fechar"><i class="material-icons">close</i></a>
         <label>
             Usuario:
-            <input type="text" name="usuario" id="usuario" [(ngModel)]="novoUsuario">
+            <input type="text" name="novoUsuario" id="usuario" [(ngModel)]="novoNomeUsuario">
         </label>
         <label>
             Senha:
