--- a/src/app/components/toolbar/toolbar.component.html
+++ b/src/app/components/toolbar/toolbar.component.html
@@ -3,4 +3,5 @@
     <h3 class="item" [routerLink]="['/servico']">Serviços</h3>
     <h3 class="item" [routerLink]="['/clientes']">Clientes</h3>
     <mat-icon [routerLink]="['/login']" class="icon">login</mat-icon>
+    <mat-icon [routerLink]="['/cadastro']">person_add</mat-icon>
 </mat-toolbar>
