--- a/src/app/components/formulario-usuario-login/formulario-usuario-login.component.css
+++ b/src/app/components/formulario-usuario-login/formulario-usuario-login.component.css
@@ -50,6 +50,19 @@ article form .controles{
     margin-bottom: 0;
 }
 
+article form .controles .salvar{
+    width: 60px;
+    height: 25px;
+    border: none;
+    border-radius: 5px;
+    background-color: #43B02A;
+    color: #fff;
+    font-weight: 700;
+}
+article form .controles .salvar:hover{
+    background-color: #2c8019;
+}
+
 article form .controles .link{
     cursor: pointer;
     margin-right: auto;
@@ -60,3 +73,4 @@ article form .controles .link:hover{
     color: #43B02A;
     font-weight: 700;
 }
+
