alteração da fonte

--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -1,9 +1,11 @@
+
+
 .section {
     width: 100%;
     max-width: 1000px;
     margin: 0 auto;
     color: #FFFFFF;
-    font-family: 'Fira Sans', sans-serif;
+    font-family: 'Montserrat', sans-serif;
 }
 
 img {
