--- a/src/app/components/clientes/clientes.component.css
+++ b/src/app/components/clientes/clientes.component.css
@@ -1,4 +1,5 @@
 .table {
+    font-family: 'Montserrat', sans-serif;
     margin: 30px auto;
     border: 1px solid #999;
     box-shadow: 1px 1px 2px #333;
