--- a/src/app/components/footer/footer.component.css
+++ b/src/app/components/footer/footer.component.css
@@ -2,7 +2,7 @@
 
 .tool-bar {
     background-color: #2B2B2B;
-    font-family: 'Fira Sans';
+    font-family: 'Montserrat', sans-serif;
     box-shadow: 0px 5px 10px gray;
     position: fixed;
     left: 0;
