--- a/src/app/components/formulario-servico/formulario-servico.component.css
+++ b/src/app/components/formulario-servico/formulario-servico.component.css
@@ -1,4 +1,5 @@
 .btn{
+    
     border: 3px solid #2B2B2B;
     color: #2B2B2B;
     font-weight: 700; 
@@ -22,6 +23,7 @@
 }
 
 .form {
+    font-family: 'Montserrat', sans-serif;
     margin: 30px auto;
     border: 1px solid #999;
     box-shadow: 1px 1px 2px #2B2B2B;
