--- a/src/app/components/servicos/servico.component.css
+++ b/src/app/components/servicos/servico.component.css
@@ -1,5 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;800&display=swap');
+
 .container{
     margin: 30px auto;
+    font-family: 'Montserrat', sans-serif;
 }
 .body{
     margin: 30px 0;
