--- a/src/app/components/toolbar/toolbar.component.css
+++ b/src/app/components/toolbar/toolbar.component.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Fira+Sans:wght@300;400;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;800&display=swap');
 
 .tool-bar {
     display: flex;
@@ -6,7 +6,7 @@
     justify-content: flex-start;
     gap: 30px;
     background-color: rgb(0, 0, 0);
-    font-family: 'Fira Sans';
+    font-family: 'Montserrat', sans-serif;
     box-shadow: 0px 5px 10px gray;
     height: 90px;
 }
