--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Fira+Sans:wght@300;400;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;800&display=swap');
 
 *{
     box-sizing: border-box;
@@ -6,7 +6,7 @@
 
 body { 
     background-color: white;
-    font-family: 'Fira Sans', sans-serif;
+    font-family: 'Montserrat', sans-serif;
     margin: 0;
     padding: 0; 
 }
