style close button login

--- a/src/app/components/formulario-usuario-login/formulario-usuario-login.component.css
+++ b/src/app/components/formulario-usuario-login/formulario-usuario-login.component.css
@@ -28,6 +28,9 @@ article form .fechar{
     align-self: flex-end;
     cursor: pointer;
 }
+article form .fechar:hover{
+    color: #2c8019;
+}
 
 article form input{
     display: block;
