style button login

--- a/src/app/components/formulario-usuario-login/formulario-usuario-login.component.css
+++ b/src/app/components/formulario-usuario-login/formulario-usuario-login.component.css
@@ -72,8 +72,7 @@ article form .controles .salvar{
 }
 article form .controles .salvar:hover{
     background-color: #2c8019;
-    width: 72px;
-    height: 37px;
+    font-weight: 800;
 }
 
 article form .controles .link{
