Mostrando um card de erro caso a confirmação de senha seja inválida

--- a/src/app/components/formulario-usuario/formulario-usuario.component.css
+++ b/src/app/components/formulario-usuario/formulario-usuario.component.css
@@ -62,3 +62,8 @@ article form .controles{
 article form .controles .link{
     margin-right: auto;
 }
+
+span {
+    cursor: pointer;
+    margin-left: 50px;
+}
